openshift-crc/graphql/graphql-deployement.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  graphql-api
  namespace: dep-graph
  labels:
    app:  dependencies-graph-graphql
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  dependencies-graph-graphql
  template:
    metadata:
      labels:
        app:  dependencies-graph-graphql
    spec:
      imagePullSecrets:
      - name: github
      containers:
      - name:  dependencies-graph-graphql
        image: ghcr.io/xclemence/dependencies-graph-graphql:2.0.0
        ports:
        - containerPort: 4001
          protocol: TCP
