openshift-crc/graphql/graphql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-api-service
  namespace: dep-graph
  labels:
    app: dependencies-graph-graphql
spec:
  selector:
    app: dependencies-graph-graphql
  ports:
    - protocol: TCP
      name: http
      port: 4001
      targetPort: 4001
