openshift-crc/graphql/graphql-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: graphql-api
  namespace: dep-graph
  labels:
    app: dependencies-graph-graphql
spec:
  path: /
  to:
    kind: Service
    name: graphql-api-service
  port:
    targetPort: 4001
